--- a/src/Assignment11/Assignment_11_PolymorphismUI.form
+++ b/src/Assignment11/Assignment_11_PolymorphismUI.form
@@ -182,6 +182,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="m_tfWidth">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="0"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="m_tfWidthActionPerformed"/>
       </Events>
@@ -195,6 +198,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="m_tfHeight">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="0"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="m_tfHeightActionPerformed"/>
       </Events>
